# frontier-assessment

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  ROADMAP.md  bash.exe.stackdump  config.yaml  pyproject.toml
.claude/skills/conductor/: SKILL.md
.claude/skills/extractor/: SKILL.md
.claude/skills/navigator/: SKILL.md
.claude/skills/orchestrator/: SKILL.md
.claude/skills/page-classifier/: SKILL.md
.claude/skills/profile-author/: SKILL.md
.claude/skills/reporter/: SKILL.md
.claude/skills/validator/: SKILL.md
data/: README.md  REPORT.md  products.csv  products.json  products.xlsx  run_summary.json
data/books_demo/: products.csv  products.json  products.xlsx  run_summary.json
data/safco_full/: products.csv  products.json  products.xlsx  run_summary.json
docs/: ARCHITECTURE.md  DEMO.md  MANUAL.md  PROFILES.md  PROGRESS.md  SCHEMA.md  presentation.html
profiles/books.toscrape.com/: catalog-listing.json
profiles/safcodental.com/: _source.json  catalog-listing.json  product-detail.json
scripts/: render_presentation.py
src/safco_scraper/: __init__.py  cli.py  config.py  models.py  orchestrator.py
src/safco_scraper/agents/: completeness.py  conductor.py  extractor.py  profile_author.py  reporter.py
src/safco_scraper/fetcher/: __init__.py  (+4 more)
tests/: conftest.py  test_completeness.py  test_compliance.py  test_conductor.py  test_extract.py  test_grounding.py  test_navigate.py  test_pagination.py  test_profile.py  test_source_recipe.py  test_validate.py
tests/fixtures/: gloves_listing.html  product_detail.html  sutures_listing.html
(+22 files in other folders)
