[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safco-scraper"
version = "0.1.0"
description = "Agentic, self-adapting product catalog scraper (Safco Dental POC)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Frontier Dental AI take-home" }]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.6",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# LLM agent layer (only needed for profile-author / reporter / LLM fallback tiers)
llm = ["anthropic>=0.39"]
# JS / anti-bot escalation fetcher
browser = ["playwright>=1.44"]
dev = ["pytest>=8.0"]

[project.scripts]
safco = "safco_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
